--- a/first.html
+++ b/first.html
@@ -1,1 +1,22 @@
-firstpage
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gourmetau Catering</title>
+  
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="">Gourmetau Catering</a></li>
+            <li class="right"><a href="">About</a></li>
+            <li class="right"><a href="">Menu</a></li>
+            <li class="right"><a href="">Contact Us</a></li>
+        </ul>
+    </nav>
+    <div class ="img">
+        <img src="https://www.w3schools.com/w3images/hamburger.jpg" alt="">
+    </div>
+</body>
+</html>
